[tool.poetry]
name = "phjob_scraper"
version = "0.1.1"
description = "Job Scraper for jobs from the Philippines from various job posting websites as a python library."
authors = ["Joshue Abance (tbdsux) <iamcoderx@gmail.com>"]
readme = "README.md"
packages = [{include = "job_scraper"}]
repository = "https://github.com/tbdsux/job-scraper"
documentation = "https://github.com/tbdsux/job-scraper"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
bs4 = "^0.0.1"
lxml = "^4.9.2"
cloudscraper = "^1.2.69"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.16"
black = "^23.1.0"
flake8 = "^6.0.0"
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
